--- a/index.html
+++ b/index.html
@@ -48,7 +48,27 @@
       </div>
     </section>
 
-    
+    <section class="product">
+        <div class="container d-flex flex-wrap">
+            <div classx="cards col-sm-12 col-md-6 col-lg-4 d-flex flex-column align-items-center justify-content-center">
+                <img class="w-25" src="./imag/headphone.png" alt="">
+                <h3>HEADPHONES</h3>
+                <p>SHOPE <span> ></span></p>
+            </div>
+            <div class="cards col-sm-12 col-md-6 col-lg-4 d-flex flex-column align-items-center justify-content-center">
+                <img class="w-25" src="./imag/speaker.png" alt="">
+                <h3>HEADPHONES</h3>
+                <p>SHOPE <span> ></span></p>
+            </div>
+            <div class="cards col-sm-12 col-md-6 col-lg-4 d-flex flex-column align-items-center justify-content-center">
+                <img class="w-25" src="./imag/earephone.png" alt="">
+                <h3>HEADPHONES</h3>
+                <p>SHOPE <span> ></span></p>
+            </div>
+           
+        </div>
+
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
