--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
     </section>
 
     <section class="product">
-        <div class="container d-flex flex-wrap">
-            <div classx="cards col-sm-12 col-md-6 col-lg-4 d-flex flex-column align-items-center justify-content-center">
+        <div class="container d-flex flex-wrap align-items-center justify-content-center gap-5">
+            <div class="cards col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
                 <img class="w-25" src="./imag/headphone.png" alt="">
                 <h3>HEADPHONES</h3>
                 <p>SHOPE <span> ></span></p>
             </div>
-            <div class="cards col-sm-12 col-md-6 col-lg-4 d-flex flex-column align-items-center justify-content-center">
+            <div class="cards col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
                 <img class="w-25" src="./imag/speaker.png" alt="">
                 <h3>HEADPHONES</h3>
                 <p>SHOPE <span> ></span></p>
             </div>
-            <div class="cards col-sm-12 col-md-6 col-lg-4 d-flex flex-column align-items-center justify-content-center">
+            <div class="cards col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
                 <img class="w-25" src="./imag/earephone.png" alt="">
                 <h3>HEADPHONES</h3>
                 <p>SHOPE <span> ></span></p>
