--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     </header>
 
     <section class="hero">
-      <div class="container d-flex flex-wrap align-items-center justify-content-center">
-        <div class="info col-sm-12  col-md-6 ">
+      <div
+        class="container d-flex flex-wrap align-items-center justify-content-center"
+      >
+        <div class="info col-sm-12 col-md-6">
           <h3>NEW PRODUCT</h3>
           <h1>XX99 Mark II Headphones</h1>
           <p>
@@ -44,30 +46,64 @@
           </p>
           <button>SEE PRODUCT</button>
         </div>
-        <img class=" col-sm-12  col-md-6 img-fluid" src="./imag/hero-img.png" alt="hero_image">
+        <img
+          class="col-sm-12 col-md-6 img-fluid"
+          src="./imag/hero-img.png"
+          alt="hero_image"
+        />
       </div>
     </section>
 
     <section class="product">
-        <div class="container d-flex flex-wrap align-items-center justify-content-center gap-5">
-            <div class="cards  d-flex flex-column align-items-center justify-content-center">
-                <img class="w-25" src="./imag/headphone.png" alt="">
-                <h3>HEADPHONES</h3>
-                <p>SHOPE <span> ></span></p>
-            </div>
-            <div class="cards  d-flex flex-column align-items-center justify-content-center">
-                <img class="w-25" src="./imag/speaker.png" alt="">
-                <h3>HEADPHONES</h3>
-                <p>SHOPE <span> ></span></p>
-            </div>
-            <div class="cards  d-flex flex-column align-items-center justify-content-center">
-                <img class="img" src="./imag/earephone.png" alt="">
-                <h3>HEADPHONES</h3>
-                <p>SHOPE <span> ></span></p>
-            </div>
-           
+      <div
+        class="container d-flex flex-wrap align-items-center justify-content-center gap-5"
+      >
+        <div
+          class="cards d-flex flex-column align-items-center justify-content-center"
+        >
+          <img class="w-25" src="./imag/headphone.png" alt="" />
+          <h3 class="fs-5">HEADPHONES</h3>
+          <p>SHOPE <span> ></span></p>
         </div>
+        <div
+          class="cards d-flex flex-column align-items-center justify-content-center"
+        >
+          <img class="w-25" src="./imag/speaker.png" alt="" />
+          <h3 class="fs-5">SPEAKERS</h3>
+          <p>SHOPE <span> ></span></p>
+        </div>
+        <div
+          class="cards d-flex flex-column align-items-center justify-content-center"
+        >
+          <img class="img" src="./imag/earephone.png" alt="" />
+          <h3 class="fs-5">EARPHONES</h3>
+          <p>SHOPE <span> ></span></p>
+        </div>
+      </div>
+    </section>
 
+    <section class="speaker">
+      <div class="container d-flex align-items-center justify-content-around">
+        <img class="img" src="./imag/speaker2.png" alt="" />
+        <div class="info">
+          <h1>ZX9 SPEAKER</h1>
+          <p>
+            Upgrade to premium speakers that are phenomenally built to deliver
+            truly remarkable sound.
+          </p>
+          <button>SEE PRODUCT</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="table">
+      <div class="container d-flex align-items-center justify-content-center ">
+        <div class="info">
+          <h1>ZX7 SPEAKER</h1>
+          <button>SEE PRODUCT</button>
+        </div>
+        <img class="img" src="./imag/table.png" alt="" />
+      </div>
     </section>
 
     <script
