--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <button>SEE PRODUCT</button>
         </div>
         <img
-          class="col-sm-12 col-md-6 img-fluid"
+          class="col-sm-12 col-md-6 img-fluid img"
           src="./imag/hero-img.png"
           alt="hero_image"
         />
@@ -103,6 +103,16 @@
           <button>SEE PRODUCT</button>
         </div>
         <img class="img" src="./imag/table.png" alt="" />
+      </div>
+    </section>
+
+    <section class="earphone">
+      <div class="container d-flex align-items-center justify-content-center">
+        <img class="img" src="./imag/earphonesec.png" alt="">
+        <div class="right d-flex flex-column  justify-content-center">
+          <h1>YX1 EARPHONES</h1>
+          <button>SEE PRODUCT</button>
+        </div>
       </div>
     </section>
 
