--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
 
     <section class="table">
-      <div class="container d-flex align-items-center justify-content-center ">
+      <div class="container d-flex align-items-center justify-content-center">
         <div class="info">
           <h1>ZX7 SPEAKER</h1>
           <button>SEE PRODUCT</button>
@@ -108,10 +108,31 @@
 
     <section class="earphone">
       <div class="container d-flex align-items-center justify-content-center">
-        <img class="img" src="./imag/earphonesec.png" alt="">
-        <div class="right d-flex flex-column  justify-content-center">
+        <img class="img" src="./imag/earphonesec.png" alt="" />
+        <div class="right d-flex flex-column justify-content-center">
           <h1>YX1 EARPHONES</h1>
           <button>SEE PRODUCT</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="persson">
+      <div class="container">
+        <div class="info">
+          <h1>BRINGING YOU THE <span> BEST </span> AUDIO GEAR</h1>
+          <p>
+            Located at the heart of New York City, Audiophile is the premier
+            store for high end headphones, earphones, speakers, and audio
+            accessories. We have a large showroom and luxury demonstration rooms
+            available for you to browse and experience a wide range of our
+            products. Stop by our store to meet some of the fantastic people who
+            make Audiophile the best place to buy your portable audio equipment.
+          </p>
+        </div>
+
+
+        <div class="img">
+          <div class="overlay"></div>
         </div>
       </div>
     </section>
