--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body>
     <header class="text-white">
       <div class="container d-flex justify-content-between align-items-center">
+        <i class="fa-solid fa-bars d-sm-block d-md-none fs-1 text-white"></i>
         <h1>audiophile</h1>
         <div class="links">
           <a href="#">Home</a>
@@ -102,7 +103,7 @@
           <h1>ZX7 SPEAKER</h1>
           <button>SEE PRODUCT</button>
         </div>
-        <img class="img" src="./imag/table.png" alt="" />
+        <img class="img" src="./imag/table-removebg-preview.png" alt="" />
       </div>
     </section>
 
@@ -130,12 +131,40 @@
           </p>
         </div>
 
-
         <div class="img">
           <div class="overlay"></div>
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container d-flex flex-column">
+        <div class="head d-flex align-items-center justify-content-between flex-wrap">
+          <h1>audiophile</h1>
+          <div class="links d-flex gap-4">
+            <a href="#">Home</a>
+            <a href="#">HEADPHONES</a>
+            <a href="#">SPEAKERS</a>
+            <a href="#">EARPHONES</a>
+          </div>
+        </div>
+        <p class="prag">
+          Audiophile is an all in one stop to fulfill your audio needs. We're a
+          small team of music lovers and sound specialists who are devoted to
+          helping you get the most out of personal audio. Come and visit our
+          demo facility - we’re open 7 days a week.
+        </p>
+        <div class="icons d-flex align-items-center justify-content-between">
+          <p>Copyright 2021. All Rights Reserved</p>
+          <div class="icon">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+        </div>
+        
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
