--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class="product">
       <div
-        class="container d-flex flex-wrap align-items-center justify-content-center gap-5"
+        class="container d-flex flex-wrap align-items-center justify-content-center "
       >
         <div
           class="cards d-flex flex-column align-items-center justify-content-center"
